--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.2",
     "@hookform/resolvers": "^3.9.1",
+    "@tanstack/react-query": "^5.62.15",
+    "@tanstack/react-query-devtools": "^5.62.15",
+    "@types/lodash": "^4.17.14",
+    "axios": "^1.7.9",
+    "lodash": "^4.17.21",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
